todo-app/style.css
* {
    box-sizing: border-box;
}

body {
    background-color: #F4F4F4;
    display: flex;
    align-items: center;
    flex-direction: column;
    min-height: 100vh;
    margin: 0;
}

h1 {
    color: purple;
    font-size: 8rem;
    text-align: center;
    opacity: 0.3;
}

form {
    width: 400px;
    box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3);
    max-width: 100%;
}

.input {
    border: none;
    font-size: 2rem;
    padding: 1rem 2rem;
    display: block;
    border-radius: 5px;
    width: 100%;
}

.input::placeholder {
    color: #d5d5d5;
}

.tasks {
    background-color: #ffffff;
    padding: 0;
    border-radius: 5px;
    margin: 0;
    list-style-type: none;
}

.tasks li {
    border-top: 1px solid #e5e5e5;
    cursor: pointer;
    font-size: 1.2rem;
    padding: 1rem 2rem;
}

.tasks li.completed {
    color: #b5b5b5;
    text-decoration: line-through;
}

small{
    color: #b5b5b5;
    margin-top: 2.5rem;
}

